<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_primary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/iv_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_arrow_description"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow_back_24"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/iv_back_icon"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:text="@string/inventors_title"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/profile_icon_description"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_account_circle_24"/>
    </RelativeLayout>

</RelativeLayout>
