<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/include"
            layout="@layout/custom_action_bar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:contentDescription="@string/coder_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo"
            tools:text="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/coder_name"/>

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/coder_email"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="13sp" />

    </LinearLayout>
</ScrollView>